Fix text wrapping, add logout command

--- a/Web/style.scss
+++ b/Web/style.scss
@@ -229,6 +229,7 @@ div.container > #chat {
     word-wrap: break-word;
     min-height: 0px;
     height: 0%;
+	white-space: pre-wrap;
 }
 
 div.container > #footer {
